Remove --enable-preview
Signed-off-by: Stewart X Addison <sxa@redhat.com>